# Infraestructura-UNICRON

./: .dockerignore  .gitignore  CLAUDE.md  README.md  local.db  logic.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  local.db  package.json  tsconfig.json
apps/web/: .env  .env.development  .env.production  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
data/: dataset_century-21_2026-05-16_22-22-15-621.json  dataset_century-21_2026-05-17_03-59-36-791.json
docs/: RUNNING.md  plan_dia1_implementacion.md
docs/sources/: AlquilerInmueble.doc  Aticretico.doc  Contrato_MedianteIntermediario.doc  Contrato_ReservaPropiedades.doc  Contrato_VentaDirecta.doc
infra/: README.md  docker-compose.yml
infra/nginx/: default.conf  proxy.conf  rate-limit.conf
infra/scripts/: cleanup.sh  deploy.sh  healthcheck.sh  rollback.sh  scale.sh
infra/security/: cors.json  firewall.rules  helmet.config.ts  rate-limits.json
services/agents/: .env.example  README.md  pyproject.toml  railway.toml
services/agents/app/: config.py
services/agents/app/agents/: contract_reviewer.py  financial_rag.py  property_matcher.py
services/agents/app/api/: main.py
services/agents/app/data/: synthetic_properties.py
services/agents/app/db/: connection.py  schema.sql
services/agents/app/graphs/: financial_graph.py  lead_graph.py
services/agents/app/telegram/: bot.py
services/agents/scripts/: ingest_docs.py
tools/: README.md
tools/automation/: build-all.mjs  (+4 more)
(+965 files in other folders)
